lab 2 + lab 3: html + CSS

--- a/packages/proto/public/books/wayofkings.html
+++ b/packages/proto/public/books/wayofkings.html
@@ -1,6 +1,51 @@
 <!DOCTYPE html>
-<section>
-    <header>
-        <a href="../index.html">&larr; Book Board</a>
-    </header>
-</section>
+<html lang="en">
+    <head>
+        <title>Way of Kings</title>
+        <link rel="stylesheet" href="/styles/tokens.css"/>
+        <link rel="stylesheet" href="/styles/page.css"/>
+    </head>
+    <body>
+        <header>
+            <a href="../index.html">&larr; Book Board</a>
+        </header>
+
+        <section>
+            <h2>Genre</h2>
+            <ul>
+                <li>
+                    <a href="../genres/fantasy.html">Fantasy</a>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Year</h2>
+            <ul>
+                <li>
+                    <a href="../years/2010.html">2010</a>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Author</h2>
+            <ul>
+                <li>
+                    <a href="../authors/brandonsanderson.html">Brandon Sanderson</a>
+                </li>
+            </ul>
+        </section>
+
+
+        <section>
+            <h2>Reviews</h2>
+            <ul>
+                <li>
+                    <a href="../reviews/review1.html">Review 1</a>
+                </li>
+            </ul>
+        </section>
+    </body>
+</html>
+
