--- a/packages/proto/public/genres/fantasy.html
+++ b/packages/proto/public/genres/fantasy.html
@@ -1,6 +1,42 @@
 <!DOCTYPE html>
-<section>
-    <header>
-        <a href="../index.html">&larr; Book Board</a>
-    </header>
-</section>
+
+<html lang="en">
+    <head>
+        <title>Fantasy</title>
+        <link rel="stylesheet" href="/styles/tokens.css"/>
+        <link rel="stylesheet" href="/styles/page.css"/>
+    </head>
+    <body>
+        <header>
+            <a href="../index.html">&larr; Book Board</a>
+        </header>
+
+        <section>
+            <h2>Years</h2>
+            <ul>
+                <li>
+                    <a href="../years/2010.html">2010</a>
+                </li>
+            </ul>
+        </section>
+
+
+        <section>
+            <h2>Books</h2>
+            <ul>
+                <li>
+                    <a href="../books/wayofkings.html">The Way of Kings</a>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Authors</h2>
+            <ul>
+                <li>
+                    <a href="../authors/brandonsanderson.html">Brandon Sanderson</a>
+                </li>
+            </ul>
+        </section>
+    </body>
+</html>
