--- a/packages/proto/public/index.html
+++ b/packages/proto/public/index.html
@@ -1,40 +1,50 @@
 <!DOCTYPE html>
-<header>
-    <h1>Book Board</h1>
-</header>
 
-<section>
-    <h2>Books</h2>
-    <ul>
-        <li>
-            <a href="books/wayofkings.html">The Way of Kings</a>
-        </li>
-    </ul>
-</section>
+<html lang="en">
+    <head>
+        <title>Book Board</title>
+        <link rel="stylesheet" href="/styles/tokens.css"/>
+        <link rel="stylesheet" href="/styles/page.css"/>
+    </head>
+    <body>
+        <header>
+            <h1>Book Board</h1>
+        </header>
 
-<section>
-    <h2>Genres</h2>
-    <ul>
-        <li>
-            <a href="genres/fantasy.html">Fantasy</a>
-        </li>
-    </ul>
-</section>
+        <section>
+            <h2>Books</h2>
+            <ul>
+                <li>
+                    <a href="books/wayofkings.html">The Way of Kings</a>
+                </li>
+            </ul>
+        </section>
 
-<section>
-    <h2>Authors</h2>
-    <ul>
-        <li>
-            <a href="authors/brandonsanderson.html">Brandon Sanderson</a>
-        </li>
-    </ul>
-</section>
+        <section>
+            <h2>Genres</h2>
+            <ul>
+                <li>
+                    <a href="genres/fantasy.html">Fantasy</a>
+                </li>
+            </ul>
+        </section>
 
-<section>
-    <h2>Years</h2>
-    <ul>
-        <li>
-            <a href="years/2010.html">2010</a>
-        </li>
-    </ul>
-</section>
+        <section>
+            <h2>Authors</h2>
+            <ul>
+                <li>
+                    <a href="authors/brandonsanderson.html">Brandon Sanderson</a>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Years</h2>
+            <ul>
+                <li>
+                    <a href="years/2010.html">2010</a>
+                </li>
+            </ul>
+        </section>
+    </body>
+</html>
