--- a/packages/proto/public/books/wayofkings.html
+++ b/packages/proto/public/books/wayofkings.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="utf-8" />
         <title>Way of Kings</title>
         <link rel="stylesheet" href="/styles/tokens.css"/>
         <link rel="stylesheet" href="/styles/page.css"/>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -11,7 +15,12 @@
         </header>
 
         <section>
-            <h2>Genre</h2>
+            <h2>
+                <svg class="icon">
+                    <use href="/icons/books.svg#icon-love"/>
+                </svg>
+                Genre
+            </h2>
             <ul>
                 <li>
                     <a href="../genres/fantasy.html">Fantasy</a>
@@ -20,7 +29,12 @@
         </section>
 
         <section>
-            <h2>Year</h2>
+            <h2>
+                <svg class="icon">
+                    <use href="/icons/books.svg#icon-time"/>
+                </svg>
+                Year
+            </h2>
             <ul>
                 <li>
                     <a href="../years/2010.html">2010</a>
@@ -29,7 +43,12 @@
         </section>
 
         <section>
-            <h2>Author</h2>
+            <h2>
+                <svg class="icon">
+                    <use href="/icons/books.svg#icon-idea"/>
+                </svg>
+                Author
+            </h2>
             <ul>
                 <li>
                     <a href="../authors/brandonsanderson.html">Brandon Sanderson</a>
@@ -39,7 +58,12 @@
 
 
         <section>
-            <h2>Reviews</h2>
+            <h2>
+                <svg class="icon">
+                    <use href="/icons/books.svg#icon-review"/>
+                </svg>
+                Reviews
+            </h2>
             <ul>
                 <li>
                     <a href="../reviews/review1.html">Review 1</a>
