--- a/packages/proto/public/genres/fantasy.html
+++ b/packages/proto/public/genres/fantasy.html
@@ -2,9 +2,13 @@
 
 <html lang="en">
     <head>
+        <meta charset="utf-8" />
         <title>Fantasy</title>
         <link rel="stylesheet" href="/styles/tokens.css"/>
         <link rel="stylesheet" href="/styles/page.css"/>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -12,7 +16,12 @@
         </header>
 
         <section>
-            <h2>Years</h2>
+            <h2>
+                <svg class="icon">
+                    <use href="/icons/books.svg#icon-time"/>
+                </svg>
+                Years
+            </h2>
             <ul>
                 <li>
                     <a href="../years/2010.html">2010</a>
@@ -22,7 +31,12 @@
 
 
         <section>
-            <h2>Books</h2>
+            <h2>
+                <svg class="icon">
+                    <use href="/icons/books.svg#icon-books"/>
+                </svg>
+                Books
+            </h2>
             <ul>
                 <li>
                     <a href="../books/wayofkings.html">The Way of Kings</a>
@@ -31,7 +45,12 @@
         </section>
 
         <section>
-            <h2>Authors</h2>
+            <h2>
+                <svg class="icon">
+                    <use href="/icons/books.svg#icon-idea"/>
+                </svg>
+                Authors
+            </h2>
             <ul>
                 <li>
                     <a href="../authors/brandonsanderson.html">Brandon Sanderson</a>
