--- a/packages/proto/public/index.html
+++ b/packages/proto/public/index.html
@@ -2,17 +2,28 @@
 
 <html lang="en">
     <head>
+        <meta charset="utf-8" />
         <title>Book Board</title>
         <link rel="stylesheet" href="/styles/tokens.css"/>
         <link rel="stylesheet" href="/styles/page.css"/>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
-            <h1>Book Board</h1>
+            <h1>
+                Book Board
+            </h1>
         </header>
 
         <section>
-            <h2>Books</h2>
+            <h2>
+                <svg class="icon">
+                    <use href="/icons/books.svg#icon-books"/>
+                </svg>
+                Books
+            </h2>
             <ul>
                 <li>
                     <a href="books/wayofkings.html">The Way of Kings</a>
@@ -21,7 +32,12 @@
         </section>
 
         <section>
-            <h2>Genres</h2>
+            <h2>
+                <svg class="icon">
+                    <use href="/icons/books.svg#icon-love"/>
+                </svg>
+                Genres
+            </h2>
             <ul>
                 <li>
                     <a href="genres/fantasy.html">Fantasy</a>
@@ -30,7 +46,12 @@
         </section>
 
         <section>
-            <h2>Authors</h2>
+            <h2>
+                <svg class="icon">
+                    <use href="/icons/books.svg#icon-idea"/>
+                </svg>
+                Authors
+            </h2>
             <ul>
                 <li>
                     <a href="authors/brandonsanderson.html">Brandon Sanderson</a>
@@ -39,7 +60,12 @@
         </section>
 
         <section>
-            <h2>Years</h2>
+            <h2>
+                <svg class="icon">
+                    <use href="/icons/books.svg#icon-time"/>
+                </svg>
+                Years
+            </h2>
             <ul>
                 <li>
                     <a href="years/2010.html">2010</a>
