--- a/packages/proto/public/reviews/review1.html
+++ b/packages/proto/public/reviews/review1.html
@@ -2,9 +2,13 @@
 
 <html lang="en">
     <head>
+        <meta charset="utf-8" />
         <title>Review 1</title>
         <link rel="stylesheet" href="/styles/tokens.css"/>
         <link rel="stylesheet" href="/styles/page.css"/>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
