--- a/packages/proto/public/years/2010.html
+++ b/packages/proto/public/years/2010.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="utf-8" />
         <title>2010</title>
         <link rel="stylesheet" href="/styles/tokens.css"/>
         <link rel="stylesheet" href="/styles/page.css"/>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -11,7 +15,12 @@
         </header>
 
         <section>
-            <h2>Books</h2>
+            <h2>
+                <svg class="icon">
+                    <use href="/icons/books.svg#icon-books"/>
+                </svg>
+                Books
+            </h2>
             <ul>
                 <li>
                     <a href="../books/wayofkings.html">The Way of Kings</a>
@@ -20,7 +29,12 @@
         </section>
 
         <section>
-            <h2>Authors</h2>
+            <h2>
+                <svg class="icon">
+                    <use href="/icons/books.svg#icon-idea"/>
+                </svg>
+                Authors
+            </h2>
             <ul>
                 <li>
                     <a href="../authors/brandonsanderson.html">Brandon Sanderson</a>
@@ -29,7 +43,12 @@
         </section>
 
         <section>
-            <h2>Genres</h2>
+            <h2>
+                <svg class="icon">
+                    <use href="/icons/books.svg#icon-love"/>
+                </svg>
+                Genres
+            </h2>
             <ul>
                 <li>
                     <a href="../genres/fantasy.html">Fantasy</a>
