--- a/packages/proto/public/books.html
+++ b/packages/proto/public/books.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
+
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>2010</title>
+        <title>Book Board</title>
         <link rel="stylesheet" href="/styles/reset.css"/>
         <link rel="stylesheet" href="/styles/tokens.css"/>
         <link rel="stylesheet" href="/styles/page.css"/>
-        <link rel="stylesheet" href="/styles/year.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
                 </h1>
                 <nav>
                     <a href="/index.html">Home</a>
-                    <a href="/books.html">Books</a>
+                    <a class="active" href="/books.html">Books</a>
                     <a href="/genres.html">Genres</a>
                     <a href="/authors.html">Authors</a>
                     <a href="/years.html">Years</a>
@@ -29,12 +29,9 @@
                 <a href="">Login</a>
             </div>
         </header>
-        <div class="page">
-            <section class="page-title">
-                2010
-            </section>
 
-            <section class="books">
+        <div class="page">
+            <section>
                 <h2>
                     <svg class="icon">
                         <use href="/icons/books.svg#icon-books"/>
@@ -43,38 +40,15 @@
                 </h2>
                 <ul>
                     <li>
-                        <a href="../books/wayofkings.html">The Way of Kings</a>
+                        <a href="books/wayofkings.html">The Way of Kings</a>
                     </li>
-                </ul>
-            </section>
-
-            <section class="authors">
-                <h2>
-                    <svg class="icon">
-                        <use href="/icons/books.svg#icon-idea"/>
-                    </svg>
-                    Authors
-                </h2>
-                <ul>
-                    <li>
-                        <a href="../authors/brandonsanderson.html">Brandon Sanderson</a>
-                    </li>
-                </ul>
-            </section>
-
-            <section class="genres">
-                <h2>
-                    <svg class="icon">
-                        <use href="/icons/books.svg#icon-love"/>
-                    </svg>
-                    Genres
-                </h2>
-                <ul>
-                    <li>
-                        <a href="../genres/fantasy.html">Fantasy</a>
-                    </li>
+                    <li>waka</li>
+                    <li>waka</li>
+                    <li>waka</li>
+                    <li>waka</li>
                 </ul>
             </section>
         </div>
+
     </body>
 </html>
