--- a/packages/proto/public/genres/fantasy.html
+++ b/packages/proto/public/genres/fantasy.html
@@ -4,58 +4,81 @@
     <head>
         <meta charset="utf-8" />
         <title>Fantasy</title>
+        <link rel="stylesheet" href="/styles/reset.css"/>
         <link rel="stylesheet" href="/styles/tokens.css"/>
         <link rel="stylesheet" href="/styles/page.css"/>
+        <link rel="stylesheet" href="/styles/genre.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
-            <a href="../index.html">&larr; Book Board</a>
+            <div class="left-header">
+                <h1>
+                    Book Board
+                </h1>
+                <nav>
+                    <a href="/index.html">Home</a>
+                    <a href="/books.html">Books</a>
+                    <a href="/genres.html">Genres</a>
+                    <a href="/authors.html">Authors</a>
+                    <a href="/years.html">Years</a>
+                </nav>
+            </div>
+            <div class="right-header">
+                <a href="">Login</a>
+            </div>
         </header>
 
-        <section>
-            <h2>
-                <svg class="icon">
-                    <use href="/icons/books.svg#icon-time"/>
-                </svg>
-                Years
-            </h2>
-            <ul>
-                <li>
-                    <a href="../years/2010.html">2010</a>
-                </li>
-            </ul>
-        </section>
+        <div class="page">
+            <section class="page-title">
+                Fantasy
+            </section>
 
 
-        <section>
-            <h2>
-                <svg class="icon">
-                    <use href="/icons/books.svg#icon-books"/>
-                </svg>
-                Books
-            </h2>
-            <ul>
-                <li>
-                    <a href="../books/wayofkings.html">The Way of Kings</a>
-                </li>
-            </ul>
-        </section>
+            <section class="years">
+                <h2>
+                    <svg class="icon">
+                        <use href="/icons/books.svg#icon-time"/>
+                    </svg>
+                    Years
+                </h2>
+                <ul>
+                    <li>
+                        <a href="../years/2010.html">2010</a>
+                    </li>
+                </ul>
+            </section>
 
-        <section>
-            <h2>
-                <svg class="icon">
-                    <use href="/icons/books.svg#icon-idea"/>
-                </svg>
-                Authors
-            </h2>
-            <ul>
-                <li>
-                    <a href="../authors/brandonsanderson.html">Brandon Sanderson</a>
-                </li>
-            </ul>
-        </section>
+
+            <section class="books">
+                <h2>
+                    <svg class="icon">
+                        <use href="/icons/books.svg#icon-books"/>
+                    </svg>
+                    Books
+                </h2>
+                <ul>
+                    <li>
+                        <a href="../books/wayofkings.html">The Way of Kings</a>
+                    </li>
+                </ul>
+            </section>
+
+            <section class="authors">
+                <h2>
+                    <svg class="icon">
+                        <use href="/icons/books.svg#icon-idea"/>
+                    </svg>
+                    Authors
+                </h2>
+                <ul>
+                    <li>
+                        <a href="../authors/brandonsanderson.html">Brandon Sanderson</a>
+                    </li>
+                </ul>
+            </section>
+        </div>
     </body>
 </html>
