--- a/packages/proto/public/years.html
+++ b/packages/proto/public/years.html
@@ -25,7 +25,7 @@
                     <a class="active" href="/years.html">Years</a>
                 </nav>
             </div>
-            <div class="right-header">
+            <div class="login">
                 <a href="">Login</a>
             </div>
         </header>
