--- a/packages/proto/public/books/wayofkings.html
+++ b/packages/proto/public/books/wayofkings.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8" />
+        <meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1.0"/>
         <title>Way of Kings</title>
         <link rel="stylesheet" href="/styles/reset.css"/>
         <link rel="stylesheet" href="/styles/tokens.css"/>
