html templates and dark mode

--- a/packages/proto/public/authors.html
+++ b/packages/proto/public/authors.html
@@ -10,6 +10,21 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+        <script type="importmap">
+            {
+              "imports": {
+                "@calpoly/mustang": "https://unpkg.com/@calpoly/mustang"
+              }
+            }
+        </script>
+        <script type="module">
+            import { define } from "@calpoly/mustang";
+            import { AuthorListElement} from "/scripts/authors.js";
+
+            define({
+                "author-list": AuthorListElement,
+            });
+        </script>
     </head>
     <body>
         <header>
@@ -32,17 +47,18 @@
 
         <div class="page">
             <section>
-                <h2>
-                    <svg class="icon">
-                        <use href="/icons/books.svg#icon-idea"/>
-                    </svg>
-                    Authors
-                </h2>
-                <ul>
-                    <li>
-                        <a href="authors/brandonsanderson.html">Brandon Sanderson</a>
-                    </li>
-                </ul>
+                <author-list>
+                    <ul slot="author-list">
+                        <li>
+                            <a href="authors/brandonsanderson.html">Brandon Sanderson</a>
+                        </li>
+                        <li>john</li>
+                        <li>john</li>
+                        <li>john</li>
+                        <li>john</li>
+                        <li>john</li>
+                    </ul>
+                </author-list>
             </section>
         </div>
 
