--- a/packages/proto/public/books.html
+++ b/packages/proto/public/books.html
@@ -10,6 +10,21 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+        <script type="importmap">
+            {
+              "imports": {
+                "@calpoly/mustang": "https://unpkg.com/@calpoly/mustang"
+              }
+            }
+        </script>
+        <script type="module">
+            import { define } from "@calpoly/mustang";
+            import { BookListElement } from "/scripts/books.js";
+
+            define({
+                "book-list": BookListElement
+            });
+        </script>
     </head>
     <body>
         <header>
@@ -32,21 +47,17 @@
 
         <div class="page">
             <section>
-                <h2>
-                    <svg class="icon">
-                        <use href="/icons/books.svg#icon-books"/>
-                    </svg>
-                    Books
-                </h2>
-                <ul>
-                    <li>
-                        <a href="books/wayofkings.html">The Way of Kings</a>
-                    </li>
-                    <li>waka</li>
-                    <li>waka</li>
-                    <li>waka</li>
-                    <li>waka</li>
-                </ul>
+                <book-list>
+                    <ul slot="book-list">
+                        <li>
+                            <a href="books/wayofkings.html">The Way of Kings</a>
+                        </li>
+                        <li>waka</li>
+                        <li>waka</li>
+                        <li>waka</li>
+                        <li>waka</li>
+                    </ul>
+                </book-list>
             </section>
         </div>
 
