server side rendering and database setup

--- a/packages/proto/public/books.html
+++ b/packages/proto/public/books.html
@@ -50,7 +50,7 @@
                 <book-list>
                     <ul slot="book-list">
                         <li>
-                            <a href="books/wayofkings.html">The Way of Kings</a>
+                            <a href="books/thewayofkings.html">The Way of Kings</a>
                         </li>
                         <li>waka</li>
                         <li>waka</li>
