--- a/packages/proto/public/genres/fantasy.html
+++ b/packages/proto/public/genres/fantasy.html
@@ -70,7 +70,7 @@
                 <book-list>
                     <ul slot="book-list">
                         <li>
-                            <a href="../books/wayofkings.html">The Way of Kings</a>
+                            <a href="../books/thewayofkings.html">The Way of Kings</a>
                         </li>
                         <li>Words of Radiance</li>
                         <li>Oathbringer</li>
