--- a/packages/proto/public/index.html
+++ b/packages/proto/public/index.html
@@ -45,7 +45,7 @@
                 </h2>
                 <ul>
                     <li>
-                        <a href="books/wayofkings.html">The Way of Kings</a>
+                        <a href="books/thewayofkings.html">The Way of Kings</a>
                     </li>
                     <li>The Left Hand of Darkness</li>
                     <li>Circe</li>
