--- a/packages/proto/public/years/2010.html
+++ b/packages/proto/public/years/2010.html
@@ -57,7 +57,7 @@
                 <book-list>
                     <ul slot="book-list">
                         <li>
-                            <a href="../books/wayofkings.html">The Way of Kings</a>
+                            <a href="../books/thewayofkings.html">The Way of Kings</a>
                         </li>
                     </ul>
                 </book-list>
