client side rendering for all pages

--- a/packages/proto/public/authors.html
+++ b/packages/proto/public/authors.html
@@ -50,7 +50,7 @@
                 <author-list>
                     <ul slot="author-list">
                         <li>
-                            <a href="authors/brandonsanderson.html">Brandon Sanderson</a>
+                            <a href="authors/6726d9014c1f1785b3cc1e91">Brandon Sanderson</a>
                         </li>
                         <li>john</li>
                         <li>john</li>
