--- a/packages/proto/public/genres.html
+++ b/packages/proto/public/genres.html
@@ -50,7 +50,7 @@
             <genre-list>
                 <ul slot="genre-list">
                     <li>
-                        <a href="genres/fantasy.html">Fantasy</a>
+                        <a href="genres/6726d9414c1f1785b3cc1e94">Fantasy</a>
                     </li>
                 </ul>
             </genre-list>
