--- a/packages/proto/public/years.html
+++ b/packages/proto/public/years.html
@@ -50,7 +50,7 @@
                 <year-list>
                     <ul slot="year-list">
                         <li>
-                            <a href="years/2010.html">2010</a>
+                            <a href="years/6726d9924c1f1785b3cc1e97">2010</a>
                         </li>
                     </ul>
                 </year-list>
