--- a/packages/proto/public/index.html
+++ b/packages/proto/public/index.html
@@ -45,7 +45,7 @@
                 </h2>
                 <ul>
                     <li>
-                        <a href="books/thewayofkings.html">The Way of Kings</a>
+                        <a href="books/6726d8594c1f1785b3cc1e89">The Way of Kings</a>
                     </li>
                     <li>The Left Hand of Darkness</li>
                     <li>Circe</li>
@@ -62,7 +62,7 @@
                 </h2>
                 <ul>
                     <li>
-                        <a href="genres/fantasy.html">Fantasy</a>
+                        <a href="genres/6726d9414c1f1785b3cc1e94">Fantasy</a>
                     </li>
                 </ul>
             </section>
@@ -76,7 +76,7 @@
                 </h2>
                 <ul>
                     <li>
-                        <a href="authors/brandonsanderson.html">Brandon Sanderson</a>
+                        <a href="authors/6726d9014c1f1785b3cc1e91">Brandon Sanderson</a>
                     </li>
                 </ul>
             </section>
