--- a/packages/proto/public/books.html
+++ b/packages/proto/public/books.html
@@ -18,48 +18,26 @@
             }
         </script>
         <script type="module">
-            import { define } from "@calpoly/mustang";
+            import { define, Auth } from "@calpoly/mustang";
             import { BookListElement } from "/scripts/books.js";
+            import { HeaderElement } from "/scripts/header.js";
 
             define({
+                "mu-auth": Auth.Provider,
+                "bb-header": HeaderElement,
                 "book-list": BookListElement
             });
         </script>
     </head>
     <body>
-        <header>
-            <div class="left-header">
-                <h1>
-                    Book Board
-                </h1>
-                <nav>
-                    <a href="/index.html">Home</a>
-                    <a class="active" href="/books.html">Books</a>
-                    <a href="/genres.html">Genres</a>
-                    <a href="/authors.html">Authors</a>
-                    <a href="/years.html">Years</a>
-                </nav>
+        <mu-auth provides="bb:auth">
+            <bb-header></bb-header>
+            <div class="page">
+                <section>
+                    <book-list src="/api/books"></book-list>
+                </section>
             </div>
-            <div class="login">
-                <a href="">Login</a>
-            </div>
-        </header>
-
-        <div class="page">
-            <section>
-                <book-list>
-                    <ul slot="book-list">
-                        <li>
-                            <a href="books/6726d8594c1f1785b3cc1e89">The Way of Kings</a>
-                        </li>
-                        <li>waka</li>
-                        <li>waka</li>
-                        <li>waka</li>
-                        <li>waka</li>
-                    </ul>
-                </book-list>
-            </section>
-        </div>
-
+            <script type="module" src="/scripts/darkModeToggle.js"></script>
+        </mu-auth>
     </body>
 </html>
